# Lamps

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  CSVWriter.h  ControlPanel.cpp  ControlPanel.h  Experiment.cpp  Experiment.h  Lamp.cpp  Lamp.h  Lamps.cpp  Lamps.h  UserPanel.cpp  UserPanel.h  main.cpp
